# pyrex

./: .env  .gitignore  README.md  main.py  pyproject.toml  test_action_ids.py
app/: layout.px  layout.pyx  page.px  page.pyx
app/about/: page.px  page.pyx
app/actions/: page.px  page.pyx
app/profile/me/: page.px  page.pyx
app/tasks/: page.px
lib/: db.py
pyrex/: __init__.py  cli.py  engine.py  env_loader.py  jsx_runtime.py  px_loader.py  tui.py
pyrex/parser/: jsx_parser.py  preprocessor.py  pyx_parser.py
pyrex/static/: pyrex.js
pyrex/transpiler/: transpiler.py
pyrex_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_action_registration.py  test_async_transpilation.py  test_event_handlers.py  test_js_proxy_generation.py  test_type_validation.py
