[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrex-framework"
version = "0.1.0"
description = "Python JSX-like framework that transpiles .pyx files to HTML + vanilla JS"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.scripts]
pyrex = "pyrex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrex*"]